2003-06-27  Geoff Youngs  <g@intersect-uk.co.uk>

	* src/rbgdk.c: Gdk::pointer_grab, Gdk::keyboard_grab fixes.
	Add Gdk.windowing_(x11|win32|fb)?
	* src/rbgdkdisplay.c, src/rbgdkscreen.c: Added.
	* src/rbgdkdraw.c: Add Gdk::Drawable#xid for X11 only.
	Add Gdk::Drawable#screen, #display since GTK+-2.2.
	* src/rbgtktreemodel.c: Change to using rb_yield() in Gtk::TreeStore#each.
	* src/rbgdkevent.c: Fix for Gdk::EventProperty#atom to return 
	Gdk::Atom instead of integer value.

2003-06-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/init.c: Remove gtk_setlocale() as it'll call in glib2.

2003-06-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/*.c: Use G_BLOCK_PROC instead of rb_f_lambda(). 
	This change is for ruby-1.8.x.

2003-06-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/init.c, src/rbgtkmain.c: Call setlocale(LC_NUMERIC, "C") for 
	some locales which doesn't use "." as decimal-point.	
	Pointed out by Joao Pedrosa.
	* src/rbgtkbindingset.c: Added.
	* src/rbgtkobject.c: Add Gtk::Object#bindings_activate(from Bindings). 
	* src/rbgtkeditable.c: Change return value of Gtk::Editable#selection_bounds 
	same as Gtk::Label#selection_bounds.
	* src/rbgtktreemodel.c: Fix Gtk::TreeModel#each. Pointed out by 
	Joao Pedrosa.
	* src/rbgtkmain.c: Add Gtk.default_language, .main_iteration_do, 
	.current, .main_do_event, .input_add, .quit_add, .quit_remove, 
	.key_snooper_install, .key_snooper_remove, .current_event_time, 
	.current_event_state, .get_event_widget, .propagate_event.
	* init.c, src20/gtk20.c, src22/gtk22.c, src/rbgtkclipboard.c: 
	Add Gtk::Clipboard#display, #wait_for_contents.

2003-06-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtknotebook.c: Code cleanup. 
	Remove Gtk::Notebook#popup_disable/enable. 
	Use Gtk::Notebook#enable_popup= instead.
	Add constants for GtkNotebookTab.
	Improve Gtk::Notebook#append/prepend_page_menu.
	Change parameter order of Gtk::Notebook#insert_page, #insert_page_menu.

2003-06-16  Masao Mutoh  <mutoh@highway.ne.jp>
