@@ -1,3 +1,7 @@
+2003-07-03  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgdkscreen.c, rbgdkdisplay.c: Fix to call Init_* twice.
+
 2003-06-27  Geoff Youngs  <g@intersect-uk.co.uk>
 
 	* src/rbgdk.c: Gdk::pointer_grab, Gdk::keyboard_grab fixes.
